<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.TermsAndConditionsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnTermsAndConditionsClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="X"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textViewTermsAndConditionsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTermsAndConditionsTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/textViewTermsAndConditionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_gravity="center"/>



    <TextView
        android:id="@+id/textViewTermsConditionsAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/app_name"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textViewTermsAndConditionsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:scrollbars="vertical"
        android:text="@string/terms_conditions"
        android:textColor="@color/black" />


</LinearLayout>